# trace

./: Cargo.toml  README.md
examples/: clock.rs  pattern.rs  plane.rs  projectile.rs  projectile_ppm.rs  shadow.rs  silhouette.rs  sphere.rs  world_camera.rs
src/: camera.rs  canvas.rs  color.rs  intersection.rs  lib.rs  light.rs  mat2.rs  mat3.rs  mat4.rs  material.rs  matrix.rs  pattern.rs  plane.rs  point.rs  prelude.rs  ray.rs  shape.rs  sphere.rs  tuple.rs  vector.rs  world.rs
src/pattern/: blended.rs  checkers.rs  checkers_nested.rs  gradient.rs  perturb.rs  radial_gradient.rs  ring.rs  solid.rs  stripe.rs
