[package]
name = "trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[example]]
name = "projectile"
path = "examples/projectile.rs"

[[example]]
name = "projectile_ppm"
path = "examples/projectile_ppm.rs"

[[example]]
name = "clock"
path = "examples/clock.rs"

[[example]]
name = "silhouette"
path = "examples/silhouette.rs"